--- a/index2.html
+++ b/index2.html
@@ -600,15 +600,6 @@
         }
 
         @media (max-width: 768px) {
-            .intro-en {
-                font-size: 2rem;
-            }
-
-            .intro-content {
-                padding: 0 20px;
-                text-align: center;
-            }
-
             .header-inner {
                 flex-direction: column;
                 height: auto;
@@ -617,10 +608,75 @@
 
             nav ul {
                 margin-top: 15px;
+                flex-wrap: wrap;
+                justify-content: center;
             }
 
             nav ul li {
-                margin: 0 10px;
+                margin: 5px 10px;
+            }
+
+            /* スマホ版ヒーローセクション：上下配置 */
+            .hero-container {
+                flex-direction: column;
+                height: auto;
+                padding-top: 140px;
+                /* ヘッダー分確保 */
+                padding-bottom: 40px;
+            }
+
+            .hero-left {
+                width: 100%;
+                padding: 0 20px 40px 20px;
+                text-align: center;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .intro-content {
+                padding: 0;
+                text-align: center;
+                width: 100%;
+            }
+
+            .intro-jp {
+                font-size: 1rem;
+                margin-bottom: 15px;
+            }
+
+            .intro-en {
+                font-size: 2rem;
+                line-height: 1.2;
+                margin-bottom: 20px;
+            }
+
+            .intro-desc {
+                font-size: 0.9rem;
+                margin-bottom: 30px;
+            }
+
+            .hero-right {
+                width: 100%;
+                height: 300px;
+                /* アニメーションエリアの高さを確保 */
+                position: relative;
+                margin-top: 20px;
+            }
+
+            /* フッターリンク：縦積み */
+            .footer-links {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 20px;
+            }
+
+            .footer-links a {
+                margin: 0;
+                display: block;
+                font-size: 1rem;
             }
         }
     </style>
@@ -892,7 +948,7 @@
                 <a href="#membership">Membership</a>
                 <a href="#org">Organization</a>
             </div>
-            <p class="copyright">© Authorized Cannabinoid. All Rights Reserved.</p>
+            <p class="copyright">© 2025 Authorized Cannabinoid. All Rights Reserved.</p>
         </div>
     </footer>
 
