--- a/index.html
+++ b/index.html
@@ -600,20 +600,28 @@
         }
 
         @media (max-width: 768px) {
+            .logo {
+                font-size: 1.1rem;
+                margin-bottom: 20px;
+                padding: 0 10px;
+                line-height: 1.4;
+            }
+
             .header-inner {
                 flex-direction: column;
                 height: auto;
-                padding: 15px 0;
+                padding: 20px 0;
             }
 
             nav ul {
-                margin-top: 15px;
+                margin-top: 10px;
                 flex-wrap: wrap;
                 justify-content: center;
+                gap: 5px;
             }
 
             nav ul li {
-                margin: 5px 10px;
+                margin: 5px 8px;
             }
 
             /* スマホ版ヒーローセクション：上下配置 */
@@ -662,7 +670,7 @@
                 height: 300px;
                 /* アニメーションエリアの高さを確保 */
                 position: relative;
-                margin-top: 20px;
+                margin-top: 40px;
             }
 
             /* フッターリンク：縦積み */
