--- a/index.html
+++ b/index.html
@@ -631,6 +631,8 @@
                 padding-top: 140px;
                 /* ヘッダー分確保 */
                 padding-bottom: 40px;
+                position: relative;
+                /* 重なり制御の基準点 */
             }
 
             .hero-left {
@@ -639,7 +641,9 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                /* タイトル等は中央でも良いが、説明文は左寄せにするためコンテナは調整 */
+                /* テキストを最前面に確保 */
+                position: relative;
+                z-index: 20;
             }
 
             .intro-content {
@@ -686,7 +690,11 @@
             .hero-right {
                 width: 100%;
                 height: 300px;
+                /* アニメーションエリアの高さを確保 */
+                position: relative;
                 margin-top: 40px;
+                z-index: 5;
+                /* テキストより下にする */
             }
 
             /* Criteriaリスト：スマホでの余白削減 */
